@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<!ENTITY version "SVN-20070714">
-<!ENTITY releasedate "July 14, 2007">
+<!ENTITY version "SVN-20070718">
+<!ENTITY releasedate "July 18, 2007">
 <!ENTITY milestone "6.3">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
 
